GG-48502 Apply code-review
** Update comment
** Expanded try/catch in ClientAddressReloader
** Fixed bug in usesDefaultAddressFinder
** Stopped mutating the client configuration unnecessarily